; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/extr_builtin-c2c.c_cmd_c2c.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/extr_builtin-c2c.c_cmd_c2c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@c2c_options = common dso_local global i32 0, align 4
@c2c_usage = common dso_local global i32 0, align 4
@PARSE_OPT_STOP_AT_NON_OPTION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"rec\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"rep\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cmd_c2c(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load i8**, i8*** %5, align 8
  %8 = load i32, i32* @c2c_options, align 4
  %9 = load i32, i32* @c2c_usage, align 4
  %10 = load i32, i32* @PARSE_OPT_STOP_AT_NON_OPTION, align 4
  %11 = call i32 @parse_options(i32 %6, i8** %7, i32 %8, i32 %9, i32 %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %18, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @c2c_usage, align 4
  %16 = load i32, i32* @c2c_options, align 4
  %17 = call i32 @usage_with_options(i32 %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %2
  %19 = load i8**, i8*** %5, align 8
  %20 = getelementptr inbounds i8*, i8** %19, i64 0
  %21 = load i8*, i8** %20, align 8
  %22 = call i32 @strncmp(i8* %21, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 3)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %28, label %24

24:                                               ; preds = %18
  %25 = load i32, i32* %4, align 4
  %26 = load i8**, i8*** %5, align 8
  %27 = call i32 @perf_c2c__record(i32 %25, i8** %26)
  store i32 %27, i32* %3, align 4
  br label %44

28:                                               ; preds = %18
  %29 = load i8**, i8*** %5, align 8
  %30 = getelementptr inbounds i8*, i8** %29, i64 0
  %31 = load i8*, i8** %30, align 8
  %32 = call i32 @strncmp(i8* %31, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 3)
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %38, label %34

34:                                               ; preds = %28
  %35 = load i32, i32* %4, align 4
  %36 = load i8**, i8*** %5, align 8
  %37 = call i32 @perf_c2c__report(i32 %35, i8** %36)
  store i32 %37, i32* %3, align 4
  br label %44

38:                                               ; preds = %28
  %39 = load i32, i32* @c2c_usage, align 4
  %40 = load i32, i32* @c2c_options, align 4
  %41 = call i32 @usage_with_options(i32 %39, i32 %40)
  br label %42

42:                                               ; preds = %38
  br label %43

43:                                               ; preds = %42
  store i32 0, i32* %3, align 4
  br label %44

44:                                               ; preds = %43, %34, %24
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32 @parse_options(i32, i8**, i32, i32, i32) #1

declare dso_local i32 @usage_with_options(i32, i32) #1

declare dso_local i32 @strncmp(i8*, i8*, i32) #1

declare dso_local i32 @perf_c2c__record(i32, i8**) #1

declare dso_local i32 @perf_c2c__report(i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
